@@ -1,7 +1,8 @@
 1.1.1 (--.--.2012):
 - enable Add / Remove action buttons;
 - do not propose to drop icon in place which equals its current index;
-- enable Apply button when configuration values are changed.
+- enable Apply button when configuration values are changed;
+- some other fixes and changes.
 
 1.1.0 (20.03.2012):
 - added per launcher task connecting rules;
